	- primary and slave zone pathnames can now automatically
	  be "hashed" by the first letter(s) of zone name, by
	  using special tag %N in "Primary zone-file path" and/or
	  "Slave zone-file path" fields in server settings.
	- database format changes (1.2):
	   - settings: renamed column 'key' --> 'setting'
	   - nets: new columnd 'dummy'
	   - servers: new column 'lastrun'
	- new configuration valiablre SAURON_CHR that allows
          limiting what can be used in some host record
	  fields (dept,location,asset_id) by server and by
	  user group
	- VLAN names now can be in mixed-case (before only 
	  lower-case was allowed)
	- support for "DHCP only" entries without IP
	  (just MAC address)
	- sauron.cgi script split into several modules
	  that are loaded only when needed (should make
	  code more manageable and maybe a even slightly faster)
	- added support for Apache (external) authentication
	
0.7.0
	- added new utility import-nets for importing/updating
	  nets (and VLANs) from a CSV file
	- added support for custom DHCP classes
	- removed hosts	show up as "pending" changes to zone
	  (before only new hosts or modified hosts showed up)
	- added new user/group privileges that can be used to 
	  control what type records user can add
	- improved code for detecting wheter zone serial should
	  be increased or not (detects removed hosts and work
	  with reverse zones)
	- added initial (Cisco) VMPS support
	   - export-vmps utility for generating VMPS configuration files
	   - VMPS domains can now be managed via Web interface
	   - groups may now be associated with a VMPS domain
	- changed DBI (DBD::Pg) as default database access method
	  (use --with-Pg option when running configure to use Pg)
	- user can now be member of more than one user group
	- database format changes (1.1):
	    - lastlog: changed host from CHAR(40) --> TEXT
	    - hosts: added new columns: vmps, dhcp_last
	    - users: removed column 'gid' (group memberships are treated