@@ -1583,7 +1583,7 @@ sub get_host($$) {
 	       "hinfo_hw,hinfo_sw,wks,mx,rp_mbox,rp_txt,router," .
 	       "prn,ether,ether_alias,info,location,dept,huser,model," .
 	       "serial,misc,cdate,cuser,muser,mdate,comment,dhcp_date," .
-	       "expiration,asset_id,dhcp_info,flags",
+	       "expiration,asset_id,dhcp_info,flags,email",
 	       $id,$rec,"id");
   return -1 if ($res < 0);
   fix_bools($rec,"prn");
