@@ -49,14 +49,16 @@ my %host_form = (
    definfo=>['','Default']},
   {ftype=>1, tag=>'router', name=>'Router (priority)', type=>'priority',
    len=>10, empty=>0,definfo=>['0','No'], iff=>['type','1']},
-  {ftype=>1, tag=>'huser', name=>'User', type=>'text', len=>40, empty=>1,
-   iff=>['type','1']},
-  {ftype=>1, tag=>'dept', name=>'Dept.', type=>'text', len=>30, empty=>1,
-   chr=>1, iff=>['type','1']},
+  {ftype=>1, tag=>'huser', name=>'User', type=>'text', len=>40, maxlen=>80,
+   empty=>1, iff=>['type','1']},
+  {ftype=>1, tag=>'dept', name=>'Dept.', type=>'text', len=>30, maxlen=>60,
+   empty=>1, chr=>1, iff=>['type','1']},
   {ftype=>1, tag=>'location', name=>'Location', type=>'text', len=>30,
-   chr=>1, empty=>1, iff=>['type','1']},
+   maxlen=>60, chr=>1, empty=>1, iff=>['type','1']},
+  {ftype=>1, tag=>'email', name=>'User Email', type=>'email', len=>30,
+   maxlen=>60, chr=>1, empty=>1, iff=>['type','1']},
   {ftype=>1, tag=>'info', name=>'[Extra] Info', type=>'text', len=>50,
-   empty=>1},
+   maxlen=>100, empty=>1},
 
   {ftype=>0, name=>'Equipment info', iff=>['type','1|101']},
   {ftype=>101, tag=>'hinfo_hw', name=>'HINFO hardware', type=>'hinfo', len=>25,
@@ -139,14 +141,16 @@ my %restricted_host_form = (
    len=>60, iff=>['type','4'], iff2=>['alias','-1']},
   {ftype=>4, tag=>'id', name=>'Host ID'},
   {ftype=>4, tag=>'type', name=>'Type', type=>'enum', enum=>\%host_types},
-  {ftype=>1, tag=>'huser', name=>'User', type=>'text', len=>40,
+  {ftype=>1, tag=>'huser', name=>'User', type=>'text', len=>40, maxlen=>80,
    empty=>$main::SAURON_RHF{huser}, iff=>['type','1']},
-  {ftype=>1, tag=>'dept', name=>'Dept.', type=>'text', len=>30,
+  {ftype=>1, tag=>'dept', name=>'Dept.', type=>'text', len=>30, maxlen=>60,
    empty=>$main::SAURON_RHF{dept}, chr=>1, iff=>['type','1']},
-  {ftype=>1, tag=>'location', name=>'Location', type=>'text', len=>30,
-   empty=>$main::SAURON_RHF{location}, chr=>1, iff=>['type','1']},
+  {ftype=>1, tag=>'location', name=>'Location', type=>'text', len=>30, 
+   maxlen=>60, empty=>$main::SAURON_RHF{location}, chr=>1, iff=>['type','1']},
+  {ftype=>1, tag=>'email', name=>'User Email', type=>'email', len=>30,
+   maxlen=>60, chr=>1, empty=>$main::SAURON_RHF{email}, iff=>['type','1']},
   {ftype=>1, tag=>'info', name=>'[Extra] Info', type=>'text', len=>50,
-   empty=>$main::SAURON_RHF{info}},
+   maxlen=>100, empty=>$main::SAURON_RHF{info}},
 
   {ftype=>0, name=>'Equipment info', iff=>['type','1|101']},
   {ftype=>101, tag=>'hinfo_hw', name=>'HINFO hardware', type=>'hinfo', len=>25,
@@ -225,13 +229,16 @@ my %new_host_form = (
   {ftype=>6, tag=>'mx', name=>'MX template', iff=>['type','[13]']},
   {ftype=>7, tag=>'wks', name=>'WKS template', iff=>['type','1']},
   {ftype=>0, name=>'Host info',iff=>['type','1']},
-  {ftype=>1, tag=>'huser', name=>'User', type=>'text', len=>40, empty=>1,
-   iff=>['type','1']},
-  {ftype=>1, tag=>'dept', name=>'Dept.', type=>'text', len=>30, empty=>1,
-   chr=>1, iff=>['type','1']},
-  {ftype=>1, tag=>'location', name=>'Location', type=>'text', len=>30,
+  {ftype=>1, tag=>'huser', name=>'User', type=>'text', len=>40, maxlen=>80,
+   empty=>1, iff=>['type','1']},
+  {ftype=>1, tag=>'dept', name=>'Dept.', type=>'text', len=>30, maxlen=>60,
    empty=>1, chr=>1, iff=>['type','1']},
-  {ftype=>1, tag=>'info', name=>'Info', type=>'text', len=>50, empty=>1 },
+  {ftype=>1, tag=>'location', name=>'Location', type=>'text', len=>30,
+   maxlen=>60, empty=>1, chr=>1, iff=>['type','1']},
+  {ftype=>1, tag=>'email', name=>'User Email', type=>'email', len=>30,
+   maxlen=>60, chr=>1, empty=>1, iff=>['type','1']},
+  {ftype=>1, tag=>'info', name=>'Info', type=>'text', len=>50, maxlen=>100,
+   empty=>1 },
   {ftype=>0, name=>'Equipment info',iff=>['type','1']},
   {ftype=>101, tag=>'hinfo_hw', name=>'HINFO hardware', type=>'hinfo', len=>20,
    sql=>"SELECT hinfo FROM hinfo_templates WHERE type=0 ORDER BY pri,hinfo;",
@@ -294,14 +301,16 @@ my %restricted_new_host_form = (
   {ftype=>6, tag=>'mx', name=>'MX template', iff=>['type','1']},
   {ftype=>7, tag=>'wks', name=>'WKS template', iff=>['type','1']},
   {ftype=>0, name=>'Host info',iff=>['type','1']},
-  {ftype=>1, tag=>'huser', name=>'User', type=>'text', len=>40,
+  {ftype=>1, tag=>'huser', name=>'User', type=>'text', len=>40, maxlen=>80,
    empty=>$main::SAURON_RHF{huser}, iff=>['type','1']},
-  {ftype=>1, tag=>'dept', name=>'Dept.', type=>'text', len=>30,
+  {ftype=>1, tag=>'dept', name=>'Dept.', type=>'text', len=>30, maxlen=>60,
    empty=>$main::SAURON_RHF{dept}, chr=>1, iff=>['type','1']},
   {ftype=>1, tag=>'location', name=>'Location', type=>'text', len=>30,
-   empty=>$main::SAURON_RHF{location}, chr=>1, iff=>['type','1']},
+   maxlen=>60, empty=>$main::SAURON_RHF{location}, chr=>1, iff=>['type','1']},
+  {ftype=>1, tag=>'email', name=>'User Email', type=>'email', len=>30,
+   maxlen=>60, chr=>1, empty=>$main::SAURON_RHF{email}, iff=>['type','1']},
   {ftype=>1, tag=>'info', name=>'[Extra] Info', type=>'text', len=>50,
-   empty=>$main::SAURON_RHF{info} },
+   maxlen=>100, empty=>$main::SAURON_RHF{info} },
   {ftype=>0, name=>'Equipment info',iff=>['type','1']},
   {ftype=>101, tag=>'hinfo_hw', name=>'HINFO hardware', type=>'hinfo', len=>20,
    sql=>"SELECT hinfo FROM hinfo_templates WHERE type=0 ORDER BY pri,hinfo;",
