@@ -138,6 +138,7 @@ $DB_PASSWORD = "bar";
 # $SAURON_RHF{model}    = 1; # Model
 # $SAURON_RHF{serial}   = 1; # Serial
 # $SAURON_RHF{misc}     = 1; # Misc.
+# $SAURON_RHF{email}    = 1; # User Email
 
 # Optional custom restictions for host record fields. 
 # Restrictions can be defined by server and for each
